--- a/cloudpebble-ycmd-proxy/Dockerfile
+++ b/cloudpebble-ycmd-proxy/Dockerfile
@@ -1,22 +1,24 @@
-#FROM python:2.7.16 AS squashme
+FROM python:2.7.16 AS build
 #FROM gfunkmonk/dev:xenial AS squashme
 #FROM gfunkmonk/python2:bionic AS squashme
-FROM gfunkmonk/python:trusty-mini2 AS build
+#FROM gfunkmonk/python:trusty-mini2 AS build
 SHELL ["/bin/bash", "-c"]
 
 RUN apt-get update && apt-get install -y \
-   cmake libtinfo5 git curl libclang-dev clang build-essential \
+   cmake libtinfo5 clang libclang-dev llvm llvm-dev \
    --no-install-recommends && rm -rf /var/lib/apt/lists/
 
 # ycmd
 RUN git clone https://github.com/Valloric/ycmd.git /ycmd && cd /ycmd && \
   git reset --hard c5ae6c2915e9fb9f7c18b5ec9bf8627d7d5456fd && \
   git submodule update --init --recursive && \
+  #./build.sh --clang-completer
   ./build.sh --clang-completer --system-libclang
 
-FROM gfunkmonk/python:trusty-mini2 AS squashme
+#FROM gfunkmonk/python:trusty-mini2 AS squashme
+FROM python:2.7.16 AS squashme
 COPY --from=build /ycmd /ycmd
-COPY --from=build /usr/lib/llvm-3.4/lib/libclang.so /ycmd
+COPY --from=build /usr/lib/llvm-*/lib/libclang.so /ycmd
 
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
   apt-get update && apt-get install --no-install-recommends -y \
