--- a/cloudpebble-ycmd-proxy/Dockerfile.debian
+++ b/cloudpebble-ycmd-proxy/Dockerfile.debian
@@ -1,10 +1,12 @@
-#FROM python:2.7.16
-FROM gfunkmonk/python2:xenial AS squashme
+FROM python:2.7.16 AS squashme
+#FROM gfunkmonk/dev:xenial AS squashme
+#FROM gfunkmonk/python2:bionic AS squashme
+#FROM gfunkmonk/python:trusty-mini2 AS build
 SHELL ["/bin/bash", "-c"]
 
 RUN apt-get update && apt-get install -y \
-  cmake libtinfo5 git curl libclang-dev clang \
-   && rm -rf /var/lib/apt/lists/
+   cmake libtinfo5 git curl libclang-dev clang build-essential \
+   --no-install-recommends && rm -rf /var/lib/apt/lists/
 
 # ycmd
 RUN git clone https://github.com/Valloric/ycmd.git /ycmd && cd /ycmd && \
@@ -12,11 +14,16 @@ RUN git clone https://github.com/Valloric/ycmd.git /ycmd && cd /ycmd && \
   git submodule update --init --recursive && \
   ./build.sh --clang-completer --system-libclang
 
-# Grab the toolchain
-RUN mkdir /arm-cs-tools && curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
+#FROM gfunkmonk/python:trusty-mini2 AS squashme
+#COPY --from=build /ycmd /ycmd
+#COPY --from=build /usr/lib/llvm-3.4/lib/libclang.so /ycmd
 
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
-  apt-get install -y nodejs
+  apt-get update && apt-get install --no-install-recommends -y \
+  libtinfo5 curl xz-utils nodejs && rm -rf /var/lib/apt/lists/
+
+# Grab the toolchain
+RUN mkdir /arm-cs-tools && curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
 
 # Install SDK 2
 RUN mkdir /sdk2 && \
@@ -31,6 +38,8 @@ RUN mkdir /sdk3 && \
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
+#RUN apt remove --purge curl xz-utils git -y && apt-get autoremove --purge -y
+
 COPY . /code
 FROM scratch
 COPY --from=squashme / /
@@ -42,4 +51,3 @@ ENV PATH="$PATH:/arm-cs-tools/bin" YCMD_PEBBLE_SDK2=/sdk2/ YCMD_PEBBLE_SDK3=/sdk
   YCMD_DEFAULT_SETTINGS=/ycmd/ycmd/default_settings.json
 
 CMD ["python", "proxy.py"]
-
