--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -1,25 +1,18 @@
-#FROM python:2.7.16 AS squashme
-#FROM gfunkmonk/python2:bionic AS squashme
-#FROM gfunkmonk/dev:bionic AS squashme
-FROM gfunkmonk/python:disco-mini2 AS squashme
+#FROM python:2.7.16
+FROM gfunkmonk/python:alpine-builddep AS squashme
 SHELL ["/bin/bash", "-c"]
 
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
-  apt-get install -y nodejs
-
-RUN npm install -g jshint jslint
+#RUN npm install -g npm jshint jslint
 
 # Django stuff
-RUN apt-get update && apt-get install -y \
-    gettext memcached postgresql-client libpq-dev git curl libjpeg-dev make libfreetype6-dev \
-    gcc g++ zlib1g-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
+RUN apk update && apk add --no-cache gettext memcached postgresql-dev nodejs npm git
 
 RUN pip install psycopg2 django==1.6.2
 
 EXPOSE 8000
 
 # CloudPebble stuff
-RUN npm install -g bower && echo '{"allow_root": true}' > /root/.bowerrc
+RUN npm install -g bower jshint jslint && echo '{"allow_root": true}' > /root/.bowerrc
 
 # Grab the toolchain
 RUN mkdir /arm-cs-tools && curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
@@ -46,10 +39,12 @@ WORKDIR /code
 RUN rm -rf bower_components && cd /tmp && python /code/manage.py bower install && mv bower_components /code/
 RUN python manage.py compilemessages
 RUN make -C /code/c-preload
-RUN service memcached start
-RUN apt-get remove --purge zlib1g-dev libpq-dev libfreetype6-dev libjpeg-dev xz-utils curl -y && apt-get autoremove --purge -y
+
+#RUN apt-get remove --purge git curl xz-utils -y && apt-get autoremove --pu
+RUN apk del curl xz
 FROM scratch
 COPY --from=squashme / /
 ENV WAF_NODE_PATH=/sdk3/node_modules
 WORKDIR /code
+#RUN service memcached start
 CMD ["sh", "docker_start.sh"]
