--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -21,12 +21,12 @@ mock==3.0.5
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
-gunicorn==19.5.0
+gunicorn==19.9.0
 dj-database-url==0.5.0
 newrelic==2.50.0.39
 
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
-freetype-py==1.0
+freetype-py==2.1.0.post1
 sh==1.12.14
 pypng==0.0.17
 
