--- a/cloudpebble-qemu-controller/Dockerfile.alpine
+++ b/cloudpebble-qemu-controller/Dockerfile.alpine
@@ -1,7 +1,9 @@
-FROM gfunkmonk/python:alpine-builddep AS squashme
+#FROM gfunkmonk/python:alpine-builddep AS squashme
+#FROM python:2.7-alpine AS squashme
+FROM jfloff/alpine-python:2.7 AS squashme
 SHELL ["/bin/bash", "-c"]
 
-RUN apk update && apk add --no-cache pixman dtc gnutls glib zlib boost nettle && \
+RUN apk update && apk add --no-cache bash pixman dtc gnutls glib zlib boost nettle curl wget git && \
   apk add --no-cache --virtual .build-deps \ 
   build-base gcc g++ make nettle-dev \
   pixman-dev  dtc-dev gnutls-dev \
@@ -38,17 +40,17 @@ RUN mkdir /qemu && cd /qemu && \
  # ldconfig /usr/local/lib
 
 #RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch v1.1.1 --recursive
-RUN git clone https://github.com/gfunkmonk/pypkjs.git --depth 1 --branch master --recursive && \
-  ln -s -f /usr/lib/libboost_system.so.1.69.0 /usr/lib/libboost_system.so.1.53.0 && \
+RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch master --recursive && \
+  ln -s -f /usr/lib/libboost_system.so.1.69.0 /usr/lib/libboost_system.so.1.58.0 && \
   ln -s -f /usr/lib/libboost_system.so.1.70.0 /usr/lib/libboost_system.so.1.58.0 && \
   #ln -sf /usr/lib/libboost_python27.so /usr/lib/libboost_python.so 
   #cp libs/* /usr/lib/ && 
   pip install --no-cache virtualenv
 
-RUN pip install greenlet gevent && cd /pypkjs/pypkjs/PyV8 && \
-   git clone https://github.com/buffer/pyv8.git && cd build/ && \
-   printf "V8_SNAPSHOT_ENABLED = False\nV8_GDB_JIT = True\nV8_BACKTRACE = False" > buildconf.py && \
-   python setup.py build && python setup.py install
+#RUN pip install greenlet gevent && cd /pypkjs/pypkjs/PyV8 && \
+#   git clone https://github.com/buffer/pyv8.git && cd build/ && \
+#   printf "V8_SNAPSHOT_ENABLED = False\nV8_GDB_JIT = True\nV8_BACKTRACE = False" > buildconf.py && \
+#   python setup.py build && python setup.py install
 
 RUN virtualenv /pypkjs/.env && . /pypkjs/.env/bin/activate && pip install -r /pypkjs/requirements.txt
 
@@ -70,7 +72,7 @@ RUN find /usr/local \
     && apk add --virtual .rundeps $runDeps \
     && apk del .build-deps
 
-RUN rm -fr /boost
+#RUN rm -fr /boost
 COPY . /code
 FROM scratch
 COPY --from=squashme / /
