--- a/cloudpebble/Dockerfile.debian
+++ b/cloudpebble/Dockerfile.debian
@@ -1,5 +1,5 @@
-FROM python:2.7.16 AS squashme
-#FROM gfunkmonk/python2:bionic AS squashme
+#FROM python:2.7.16 AS squashme
+FROM gfunkmonk/python2:bionic AS squashme
 #FROM gfunkmonk/dev:bionic AS squashme
 #FROM gfunkmonk/python:disco-mini2 AS squashme
 SHELL ["/bin/bash", "-c"]
@@ -11,7 +11,7 @@ RUN npm install -g jshint jslint
 
 # Django stuff
 RUN apt-get update && apt-get install -y \
-    gettext memcached postgresql-client libpq-dev --no-install-recommends \
+    gettext memcached postgresql-client libpq-dev curl git wget xz-utils --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip install psycopg2 django==1.6.2
@@ -47,7 +47,7 @@ RUN rm -rf bower_components && cd /tmp && python /code/manage.py bower install &
 RUN python manage.py compilemessages
 RUN make -C /code/c-preload
 RUN service memcached start
-#RUN apt-get remove --purge zlib1g-dev libpq-dev libfreetype6-dev libjpeg-dev xz-utils curl -y && apt-get autoremove --purge -y
+RUN apt-get remove --purge wget git xz-utils curl -y && apt-get autoremove --purge -y
 FROM scratch
 COPY --from=squashme / /
 ENV WAF_NODE_PATH=/sdk3/node_modules
