--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -3,30 +3,30 @@ django-registration==1.0
 amqp<2.0,>=1.4.9
 celery==3.1.23
 django-celery==3.1.17
-flup==1.0.3
+flup==1.0.3.dev-20110405
 psycopg2==2.8.3
 South==1.0.2
 qrcode==6.1
-Pillow==6.1.0
+Pillow==3.2.0
 pygithub==1.14.2
 python-social-auth==0.1.23
-redis==2.10.5
-boto==2.39.0
-gevent==1.3.0
+redis==2.10.3
+boto==2.49.0
+gevent==1.1
 psycogreen==1.0
 requests==2.22.0
 oauth2client==1.3
-django-bower==5.2.0
+django-bower==5.1.0
 mock==3.0.5
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
-gunicorn==19.9.0
-dj-database-url==0.5.0
+gunicorn==19.3.0
+dj-database-url==0.3.0
 newrelic==2.50.0.39
 
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
-freetype-py==2.1.0.post1
+freetype-py==1.0
 sh==1.12.14
 pypng==0.0.17
 
@@ -38,8 +38,8 @@ greenlet>=0.4.9
 httplib2==0.9.2
 kombu<3.1,>=3.0.37
 oauthlib==1.0.3
-pyasn1==0.4.7
-pyasn1-modules==0.2.6
+pyasn1==0.1.7
+pyasn1-modules==0.0.5
 python-openid==2.2.5
 pytz==2016.3
 requests-oauthlib==0.6.1
@@ -47,6 +47,6 @@ rsa==3.4.2
 six==1.12.0
 static3==0.6.1
 python-memcached
-#django-uwsgi
-#django-websocket
-#django-compat
+django-uwsgi
+django-websocket
+django-compat
