--- a/cloudpebble-ycmd-proxy/requirements.txt
+++ b/cloudpebble-ycmd-proxy/requirements.txt
@@ -2,11 +2,11 @@ Flask==1.0.1
 Flask-Cors==3.0.2
 Jinja2==2.10.1
 MarkupSafe==0.23
-Werkzeug==0.16.0
-gevent>=1.1b6
+Werkzeug==0.15.3
+gevent==1.0.2
 gevent-websocket==0.9.3
 greenlet>=0.4.14
-itsdangerous==1.1.0
-requests==2.22.0
+itsdangerous==0.24
+requests==2.20
 six==1.8.0
 wsgiref==0.1.2
