--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -7,21 +7,22 @@ flup==1.0.3.dev-20110405
 psycopg2==2.8.3
 South==1.0.2
 qrcode==6.1
-Pillow==3.2.0
+Pillow==3.3.2
 pygithub==1.14.2
 python-social-auth==0.1.23
-redis==2.10.3
+redis==2.10.5
 boto==2.49.0
-gevent==1.1
-psycogreen==1.0
+#boto3==1.4.4
+gevent==1.4
+psycogreen==1.0.1
 requests==2.22.0
-oauth2client==1.3
+oauth2client==1.5.1
 django-bower==5.1.0
-mock==3.0.5
+mock==2.0.0
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
-gunicorn==19.3.0
+gunicorn==19.5.0
 dj-database-url==0.3.0
 newrelic==2.50.0.39
 
@@ -33,8 +34,8 @@ pypng==0.0.17
 # Additional requirements
 anyjson==0.3.3
 billiard<3.4,>=3.3.0.23
-docopt==0.6.2
-greenlet>=0.4.9
+docopt==0.4.0
+greenlet==0.4.14
 httplib2==0.9.2
 kombu<3.1,>=3.0.37
 oauthlib==1.0.3
@@ -47,6 +48,6 @@ rsa==3.4.2
 six==1.12.0
 static3==0.6.1
 python-memcached
-django-uwsgi
-django-websocket
-django-compat
+#django-uwsgi
+#django-websocket
+#django-compat
