da mihr zigaretten?!

--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -1,33 +1,21 @@
-#FROM python:2.7.16 AS squashme
 FROM gfunkmonk/python2:bionic AS squashme
-#FROM gfunkmonk/dev:bionic AS squashme
-#FROM gfunkmonk/python:disco-mini2 AS squashme
 SHELL ["/bin/bash", "-c"]
 
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
-  apt-get install -y nodejs
+  apt-get update && apt-get install -y --no-install-recommends \
+  gettext memcached postgresql-client libpq-dev curl git wget xz-utils nodejs \
+  && rm -rf /var/lib/apt/lists/*
 
-RUN npm install -g jshint jslint
-
-# Django stuff
-RUN apt-get update && apt-get install -y \
-    gettext memcached postgresql-client libpq-dev curl git wget xz-utils --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN pip install psycopg2 django==1.6.2
+RUN npm install -g jshint jslint bower && pip install psycopg2 django==1.6.2 \
+  && echo '{"allow_root": true}' > /root/.bowerrc
 
 EXPOSE 8000
 
-# CloudPebble stuff
-RUN npm install -g bower && echo '{"allow_root": true}' > /root/.bowerrc
-
-# Grab the toolchain
-#RUN mkdir /arm-cs-tools && curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | tar --strip-components=1 -xJ -C /arm-cs-tools
-RUN curl -o /tmp/arm-cs-tools-4.9-2017.01.tar.xz https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz && \
-  tar -xJf /tmp/arm-cs-tools-4.9-2017.01.tar.xz -C / && rm /tmp/arm-cs-tools-4.9-2017.01.tar.xz
-
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
+
+# Grab the toolchain
+RUN curl -o /tmp/arm-cs-tools-4.9-2017.01.tar.xz https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz && tar -xJf /tmp/arm-cs-tools-4.9-2017.01.tar.xz -C / && rm /tmp/arm-cs-tools-4.9-2017.01.tar.xz
 
 # Install SDK 2
 RUN mkdir /sdk2 && \
@@ -48,7 +36,7 @@ WORKDIR /code
 RUN rm -rf bower_components && cd /tmp && python /code/manage.py bower install && mv bower_components /code/
 RUN python manage.py compilemessages
 RUN make -C /code/c-preload
-RUN service memcached start
+
 RUN apt-get remove --purge wget xz-utils curl autoconf automake libcurl4-openssl-dev libkrb5-dev liblzma-dev libmagickcore-dev libmagickwand-dev -y && apt-get autoremove --purge -y
 FROM scratch
 COPY --from=squashme / /
