--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -11,13 +11,13 @@ Pillow==3.3.2
 pygithub==1.14.2
 python-social-auth==0.1.23
 redis==2.10.5
-boto==2.49.0
+boto==2.39.0
 #boto3==1.4.4
-gevent==1.1
-psycogreen==1.0
+gevent==1.3
+psycogreen==1.0.1
 requests==2.22.0
-oauth2client==1.3
-django-bower==5.1.0
+oauth2client==1.5.1
+django-bower==5.2.0
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
@@ -47,7 +47,14 @@ requests-oauthlib==0.6.1
 rsa==3.4.2
 six==1.12.0
 static3==0.6.1
-python-memcached
+#django-redis==3.8.3
+#dj-redis-url==0.1.4
+#python-memcached
 #django-uwsgi
 #django-websocket
 #django-compat
+
+
+#django-extensions==1.6.7
+#Werkzeug==0.16.0
+#pyOpenSSL==19.0.0
