--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     environment:
       - DEBUG="yes"
       - RUN_CELERY="yes"
+      - CELERY_BROKER_URL=redis://redis:6379/0
       - AWS_ENABLED=yes
       - EXPORT_ROOT=http://172.245.74.113:8003/export.cloudpebble.net/
       - AWS_S3_FAKE_S3=172.245.74.113:8003
@@ -86,9 +87,3 @@ services:
       - ./.env
     ports:
       - "8003:4569"
-  memecached:
-    #image: memcached:latest
-    build: ./memcached/
-    restart: unless-stopped
-    ports:
-      - "11211:11211"
