--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -7,7 +7,7 @@ flup==1.0.3.dev-20110405
 psycopg2==2.8.3
 South==1.0.2
 qrcode==4.0.4
-Pillow==2.9.0
+Pillow==3.2.0
 pygithub==1.14.2
 python-social-auth==0.1.23
 redis==2.10.5
@@ -15,9 +15,9 @@ boto==2.39.0
 #boto3==1.4.4
 gevent==1.1
 psycogreen==1.0
-requests==2.7.0
+requests==2.22.0
 oauth2client==1.3
-django-bower==5.0.4
+django-bower==5.1.0
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
@@ -45,15 +45,16 @@ python-openid==2.2.5
 pytz==2016.3
 requests-oauthlib==0.6.1
 rsa==3.1.4
-six==1.10.0
+six==1.12.0
 static3==0.6.1
 #django-redis==3.8.3
 #dj-redis-url==0.1.4
 python-memcached
+django-dotenv
+django-sslserver
 #django-uwsgi
 #django-websocket
 #django-compat
-
 #django-extensions==1.6.7
 #Werkzeug==0.16.0
 #pyOpenSSL==19.0.0
