--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     build: cloudpebble/
     restart: always
     ports:
-      - "80:80"
+      - "443:443"
     volumes:
       - "./cloudpebble/:/code"
+      - "./.certs/:/etc/certs"
     links:
       - redis
       - postgres
@@ -19,7 +20,7 @@ services:
       - DEBUG="yes"
       - RUN_WEB="yes"
       - AWS_ENABLED="yes"
-      - PORT=80
+      - PORT=443
       - AWS_S3_FAKE_S3=172.245.74.113:8003
       - MEDIA_URL=http://172.245.74.113:8003/builds.cloudpebble.net/
       - QEMU_URLS=http://172.245.74.113:8001/
@@ -32,6 +33,7 @@ services:
     restart: always
     volumes:
       - "./cloudpebble/:/code"
+      - "./.certs/:/etc/certs"
     links:
       - redis
       - postgres
@@ -41,7 +43,6 @@ services:
     environment:
       - DEBUG="yes"
       - RUN_CELERY="yes"
-      - CELERY_BROKER_URL=redis://redis:6379/0
       - AWS_ENABLED=yes
       - EXPORT_ROOT=http://172.245.74.113:8003/export.cloudpebble.net/
       - AWS_S3_FAKE_S3=172.245.74.113:8003
@@ -50,6 +51,7 @@ services:
     restart: unless-stopped
     volumes:
       - "./cloudpebble-qemu-controller/:/code"
+      - "./.certs/:/etc/certs"
     env_file:
       - ./.env
     ports:
@@ -59,22 +61,27 @@ services:
     restart: unless-stopped
     volumes:
       - "./cloudpebble-ycmd-proxy/:/code"
+      - "./.certs/:/etc/certs"
     env_file:
       - ./.env  
     ports:
       - "8002:80"
   redis:
     image: redis:alpine
+    #image: redis
     restart: always
     volumes:
       - "./data/redis:/data"
+      - "./.certs/:/etc/certs"
     ports:
       - 6379:6379
   postgres:
     image: postgres:11-alpine
+    #image: postgres
     restart: always
     volumes: 
       - "./data//postgres:/var/lib/postgresql/data"
+      - "./.certs/:/etc/certs"
     ports:
       - "5432:5432"
   s3:
@@ -83,6 +90,7 @@ services:
     restart: unless-stopped
     volumes:
       - "./data/fakes3/:/fakes3_root"
+      - "./.certs/:/etc/certs"
     env_file:
       - ./.env
     ports:
