--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -1,4 +1,4 @@
-FROM gfunkmonk/python2:bionic AS squashme
+FROM gfunkmonk/python2:cosmic AS squashme
 SHELL ["/bin/bash", "-c"]
 
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
@@ -6,13 +6,14 @@ RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
   gettext memcached postgresql-client libpq-dev curl git wget xz-utils nodejs \
   && rm -rf /var/lib/apt/lists/*
 
-RUN npm install -g jshint jslint bower && pip install psycopg2 django==1.6.2 \
-  && echo '{"allow_root": true}' > /root/.bowerrc
+RUN npm install -g jshint bower && \
+  echo '{"allow_root": true}' > /root/.bowerrc
 
 EXPOSE 8000
 
 ADD requirements.txt /tmp/requirements.txt
-RUN pip install --no-cache-dir -r /tmp/requirements.txt
+RUN pip install psycopg2 django==1.6.2 && \
+  pip install --no-cache-dir -r /tmp/requirements.txt
 
 # Grab the toolchain
 RUN curl -o /tmp/arm-cs-tools-4.9-2017.01.tar.xz https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz && tar -xJf /tmp/arm-cs-tools-4.9-2017.01.tar.xz -C / && rm /tmp/arm-cs-tools-4.9-2017.01.tar.xz
@@ -37,9 +38,11 @@ RUN rm -rf bower_components && cd /tmp && python /code/manage.py bower install &
 RUN python manage.py compilemessages
 RUN make -C /code/c-preload
 
-RUN apt-get remove --purge wget xz-utils curl autoconf automake libcurl4-openssl-dev libkrb5-dev liblzma-dev libmagickcore-dev libmagickwand-dev -y && apt-get autoremove --purge -y
+RUN apt-get remove --purge wget xz-utils curl autoconf automake libcurl4-openssl-dev libkrb5-dev liblzma-dev libmagickcore-dev libmagickwand-dev tzdata -y && apt-get autoremove --purge -y
+
 FROM scratch
 COPY --from=squashme / /
 ENV WAF_NODE_PATH=/sdk3/node_modules
 WORKDIR /code
+
 CMD ["sh", "docker_start.sh"]
