--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -4,7 +4,7 @@ amqp<2.0,>=1.4.9
 celery==3.1.23
 django-celery==3.1.17
 flup==1.0.3.dev-20110405
-psycopg2==2.8.3
+psycopg2>=2.8.3
 South==1.0.2
 qrcode==6.1
 Pillow==3.3.2
@@ -13,8 +13,8 @@ python-social-auth==0.1.23
 redis==2.10.5
 boto==2.39.0
 #boto3==1.4.4
-gevent==1.3
-psycogreen==1.0.1
+gevent>=1.3
+psycogreen>=1.0.1
 requests==2.22.0
 oauth2client==1.5.1
 django-bower==5.2.0
@@ -35,7 +35,7 @@ pypng==0.0.17
 anyjson==0.3.3
 billiard<3.4,>=3.3.0.23
 docopt==0.4.0
-greenlet==0.4.9
+greenlet>=0.4.9
 httplib2==0.9.2
 kombu<3.1,>=3.0.37
 oauthlib==1.0.3
@@ -52,9 +52,8 @@ static3==0.6.1
 #python-memcached
 #django-uwsgi
 #django-websocket
-#django-compat
-
-
+django-compat
 #django-extensions==1.6.7
 #Werkzeug==0.16.0
 #pyOpenSSL==19.0.0
+django-dotenv
