--- a/cloudpebble-qemu-controller/requirements.txt
+++ b/cloudpebble-qemu-controller/requirements.txt
@@ -1,14 +1,14 @@
-Flask==1.0
-Flask-Cors==3.0.1
+Flask==0.12.4
+Flask-Cors==3.0.4
 Jinja2==2.10.1
 MarkupSafe==0.23
-Werkzeug==0.9.6
-backports.ssl-match-hostname==3.4.0.2
-gevent>=1.1b6
-gevent-websocket==0.9.3
-greenlet>=0.4.14
+Werkzeug==0.14.1
+backports.ssl-match-hostname==3.5.0.1
+gevent>=1.2.2
+gevent-websocket==0.9.5
+greenlet>=0.4.15
 itsdangerous==0.24
-redis==2.10.3
-six==1.8.0
-websocket-client==0.23.0
+redis==2.10.6
+six==1.12.0
+websocket-client==0.25.0
 wsgiref==0.1.2
