--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,6 @@ services:
     environment:
       - DEBUG="yes"
       - RUN_CELERY="yes"
-      - CELERY_BROKER_URL=redis://redis:6379/0
       - AWS_ENABLED=yes
       - EXPORT_ROOT=http://172.245.74.113:8003/export.cloudpebble.net/
       - AWS_S3_FAKE_S3=172.245.74.113:8003
@@ -64,24 +63,24 @@ services:
     ports:
       - "8002:80"
   redis:
-    image: redis:alpine
-    #image: redis
+    #image: redis:alpine
+    image: redis
     restart: always
     volumes:
       - "./data/redis:/data"
     ports:
       - 6379:6379
   postgres:
-    image: postgres:11-alpine
-    #image: postgres
+    #image: postgres:10-alpine
+    image: postgres
     restart: always
     volumes: 
       - "./data//postgres:/var/lib/postgresql/data"
     ports:
       - "5432:5432"
   s3:
-    #image: lphoward/fake-s3
-    build: fakes3/
+    image: lphoward/fake-s3
+    #build: fakes3/
     restart: unless-stopped
     volumes:
       - "./data/fakes3/:/fakes3_root"
@@ -90,8 +89,8 @@ services:
     ports:
       - "8003:4569"
   memecached:
-    #image: memcached:latest
-    build: ./memcached/
+    image: memcached:latest
+    #build: ./memcached/
     restart: unless-stopped
     ports:
       - "11211:11211"
