--- a/cloudpebble-qemu-controller/requirements.txt
+++ b/cloudpebble-qemu-controller/requirements.txt
@@ -1,14 +1,15 @@
-Flask==1.0.1
-Flask-Cors==3.0.4
+Flask==1.1.1
+Flask-Cors==2.1.3
 Jinja2==2.10.1
-MarkupSafe==0.23
-Werkzeug==0.14.1
-backports.ssl-match-hostname==3.5.0.1
-gevent>=1.2.2
-gevent-websocket==0.9.5
+MarkupSafe==1.0
+Werkzeug==0.16.0
+#backports.ssl-match-hostname==3.5.0.1
+backports.ssl-match-hostname==3.7.0.1
+gevent>=1.4.0
+gevent-websocket==0.10.1
 greenlet>=0.4.15
-itsdangerous==0.24
-redis==2.10.6
-six==1.12.0
-websocket-client==0.25.0
+itsdangerous==1.1.0
+redis==2.10.3
+six==1.6.0
+websocket-client==0.42.1
 wsgiref==0.1.2
