--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.6.3
+Django==1.6.8
 #django-registration==1.0
 django-registration-pebble==1.0.1a0
 amqp<2.0,>=1.4.9
@@ -6,26 +6,27 @@ celery==3.1.23
 django-celery==3.1.17
 #flup==1.0.3.dev-20110405
 flup6==1.1.1
-psycopg2>=2.8.3
-South>=1.0.2
+psycopg2==2.8.3
+South==1.0.2
 qrcode==6.1
 Pillow==3.3.2
-pygithub>=1.14.2
-python-social-auth==0.1.23
+pygithub==1.14.2
+#python-social-auth==0.1.23
+python-social-auth==0.1.26
 redis==2.10.6
-boto==2.42.0
+boto==2.49.0
 #boto3==1.4.4
-gevent>=1.1
-psycogreen>=1.0
+gevent==1.4
+psycogreen==1.0.1
 requests==2.22.0
-oauth2client==1.5.1
-django-bower==5.1.0
+oauth2client==1.5.2
+django-bower==5.2.0
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
 gunicorn==19.5.0
-dj-database-url==0.4.0
+dj-database-url==0.5.0
 newrelic==2.50.0.39
 
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
@@ -37,21 +38,23 @@ pypng==0.0.17
 anyjson==0.3.3
 billiard<3.4,>=3.3.0.23
 docopt==0.5.0
-greenlet>=0.4.14
-httplib2==0.9.2
+greenlet==0.4.15
+#httplib2==0.9.2
+httplib2==0.10.3
 kombu<3.1,>=3.0.37
-oauthlib==1.0.3
-pyasn1==0.1.8
-pyasn1-modules==0.0.6
-#python-openid==2.2.5
+#oauthlib==1.0.3
+oauthlib==1.1.1
+pyasn1==0.3.3
+pyasn1-modules==0.1.1
+python-openid==2.2.5
 python-openid-pebble==2.2.6
 openid-provider-pebble==0.11
 pytz==2018.3
-requests-oauthlib==0.6.2
-rsa==3.4.2
+requests-oauthlib==0.8.0
+rsa==4.0
 six==1.12.0
-static3==0.6.2
+static3==0.7.0
 python-memcached
-django-npm
+#django-npm
 django-robots==3.0
 django-dotenv==1.4.1
