--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - PORT=80
       - AWS_S3_FAKE_S3=172.245.74.113:8003
       - MEDIA_URL=http://172.245.74.113:8003/builds.cloudpebble.net/
-      - QEMU_URLS=http://172.245.74.113:8001/
+      - QEMU_URLS=http://172.245.74.113:8001/qemu-us1.cloudpebble.net/
       - YCM_URLS=http://172.245.74.113:8002/
       - PUBLIC_URL=http://172.245.74.113/
       - LIBPEBBLE_PROXY=wss://cloudpebble-ws.herokuapp.com/tool
@@ -51,6 +51,9 @@ services:
       - "./cloudpebble-qemu-controller/:/code"
     env_file:
       - ./.env
+    enviromemt:
+      - QEMU_LAUNCH_AUTH_HEADER=
+      - QEMU_LAUNCH_TIMEOUT=60
     ports:
       - "8001:80"
   ycmd:
@@ -63,7 +66,7 @@ services:
     ports:
       - "8002:80"
   redis:
-    #image: redis:alpine
+    image: redis:alpine
     image: redis
     restart: always
     volumes:
@@ -71,8 +74,8 @@ services:
     ports:
       - 6379:6379
   postgres:
-    #image: postgres:10-alpine
-    image: postgres
+    image: postgres:12-alpine
+    #image: postgres
     restart: always
     volumes: 
       - "./data//postgres:/var/lib/postgresql/data"
@@ -86,11 +89,14 @@ services:
       - "./data/fakes3/:/fakes3_root"
     env_file:
       - ./.env
+    environment:
+      - AWS_S3_HOST=s3-us-east-1.amazonaws.com
+      - HOST_NAME=s3.amazonaws.com
     ports:
       - "8003:4569"
   memecached:
-    image: memcached:latest
-    #build: ./memcached/
+    #image: memcached:latest
+    build: ./memcached/
     restart: unless-stopped
     ports:
       - "11211:11211"
