--- a/cloudpebble-qemu-controller/requirements.txt
+++ b/cloudpebble-qemu-controller/requirements.txt
@@ -4,11 +4,12 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
 backports.ssl-match-hostname==3.4.0.2
-gevent>=1.1b6
-gevent-websocket==0.9.3
+gevent>=1.1.1
+gevent-websocket>=0.9.3
 greenlet>=0.4.14
 itsdangerous==0.24
-redis==2.10.3
-six==1.8.0
-websocket-client==0.23.0
+redis==2.10.5
+six==1.9.0
+websocket-client==0.32.0
+#websocket-client>=0.32.0
 wsgiref==0.1.2
