--- a/cloudpebble-ycmd-proxy/requirements.txt
+++ b/cloudpebble-ycmd-proxy/requirements.txt
@@ -3,10 +3,10 @@ Flask-Cors==1.9.0
 Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
-gevent==1.0.2
-gevent-websocket==0.9.3
+gevent>=1.1.1
+gevent-websocket>=0.9.3
 greenlet>=0.4.14
 itsdangerous==0.24
 requests==2.22.0
-six==1.8.0
+six==1.9.0
 wsgiref==0.1.2
