--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -4,18 +4,18 @@ amqp<2.0,>=1.4.9
 celery==3.1.23
 django-celery==3.1.17
 flup==1.0.3.dev-20110405
-psycopg2==2.8.2
+psycopg2==2.8.3
 South==1.0.2
-qrcode==4.0.4
-Pillow==2.9.0
+qrcode==6.1
+Pillow==4.2.0
 pygithub==1.14.2
 python-social-auth==0.1.23
 redis==2.10.5
 boto==2.39.0
-gevent==1.1
-psycogreen==1.0
+gevent>=1.1.1
+psycogreen==1.0.1
 requests==2.22.0
-oauth2client==1.3
+oauth2client==1.5.1
 django-bower==5.1.0
 mock==2.0.0
 # This is used for Mailchimp integration
@@ -23,8 +23,8 @@ mailchimp==2.0.9
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
-gunicorn==19.3.0
-dj-database-url==0.3.0
+gunicorn==19.5.0
+dj-database-url==0.5.0
 newrelic==2.50.0.39
 
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
@@ -35,8 +35,8 @@ pypng==0.0.17
 # Additional requirements
 anyjson==0.3.3
 billiard<3.4,>=3.3.0.23
-docopt==0.4.0
-greenlet==0.4.9
+docopt==0.5.0
+greenlet>=0.4.15
 httplib2==0.9.2
 kombu==3.0.35
 oauthlib==1.0.3
@@ -45,11 +45,11 @@ pyasn1-modules==0.0.5
 python-openid==2.2.5
 pytz==2016.3
 requests-oauthlib==0.6.1
-rsa==3.1.4
-six==1.10.0
+rsa==3.4.1
+six==1.12.0
 static3==0.6.1
-python-memcached
+python-memcached==1.59
 #django-npm
 django-robots==3.0
-django-dotenv==1.4.1
-django-compat==1.0.13
+#django-dotenv==1.4.1
+#django-compat==1.0.13
