--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,6 @@ services:
       - "./cloudpebble-qemu-controller/:/code"
     env_file:
       - ./.env
-    environment:
-      - QEMU_LAUNCH_AUTH_HEADER=
-      - QEMU_LAUNCH_TIMEOUT=60
     ports:
       - "8001:80"
   ycmd:
@@ -67,14 +64,14 @@ services:
       - "8002:80"
   redis:
     image: redis:alpine
-    image: redis
+    #image: redis
     restart: always
     volumes:
       - "./data/redis:/data"
     ports:
       - 6379:6379
   postgres:
-    image: postgres:12-alpine
+    image: postgres:11-alpine
     #image: postgres
     restart: always
     volumes: 
@@ -82,16 +79,13 @@ services:
     ports:
       - "5432:5432"
   s3:
-    image: lphoward/fake-s3
-    #build: fakes3/
+    #image: lphoward/fake-s3
+    build: fakes3/
     restart: unless-stopped
     volumes:
       - "./data/fakes3/:/fakes3_root"
     env_file:
       - ./.env
-    environment:
-      - AWS_S3_HOST=s3-us-east-1.amazonaws.com
-      - HOST_NAME=s3.amazonaws.com
     ports:
       - "8003:4569"
   memecached:
