--- a/cloudpebble-qemu-controller/Dockerfile
+++ b/cloudpebble-qemu-controller/Dockerfile
@@ -29,15 +29,9 @@ RUN mkdir /qemu && cd /qemu && \
   && make clean \
   && make -j4
 
-#FROM gfunkmonk/python2:disco AS squashme
-#COPY --from=build /qemu /qemu
 
-#RUN apt-get update && apt-get install -y --no-install-recommends \
-#  libglib2.0-dev libfdt-dev libpixman-1-dev libbluetooth-dev \
-#  && rm -rf /var/lib/apt/lists/*
-
-RUN git clone https://github.com/gfunkmonk/pypkjs.git --depth 1 --branch master --recursive
-#RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch v1.1.1 --recursive
+#RUN git clone https://github.com/gfunkmonk/pypkjs.git --depth 1 --branch master --recursive
+RUN git clone https://github.com/pebble/pypkjs.git --depth 1 --branch v1.1.1 --recursive
 
 RUN pip install virtualenv && virtualenv /pypkjs/.env && . /pypkjs/.env/bin/activate && pip install -r /pypkjs/requirements.txt
 
@@ -46,8 +40,6 @@ RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
 RUN mkdir /qemu-tintin-images && cd /qemu-tintin-images && \
   curl -L https://github.com/pebble/qemu-tintin-images/archive/v4.3.tar.gz | tar xz --strip 1
-
-#COPY lib/ /lib
 
 RUN apt-get remove --purge git xz-utils automake make gcc g++ libmagickcore-dev \
   libmagickwand-dev bzr mercurial subversion -y && apt-get autoremove --purge -y
