--- a/cloudpebble-qemu-controller/requirements.txt
+++ b/cloudpebble-qemu-controller/requirements.txt
@@ -4,7 +4,7 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
 backports.ssl-match-hostname==3.4.0.2
-gevent>=1.1.1
+gevent==1.1.1
 gevent-websocket>=0.9.3
 greenlet>=0.4.14
 itsdangerous==0.24
