--- a/cloudpebble-ycmd-proxy/Dockerfile
+++ b/cloudpebble-ycmd-proxy/Dockerfile
@@ -18,7 +18,7 @@ RUN git clone https://github.com/Valloric/ycmd.git /ycmd && cd /ycmd && \
 
 # Grab the toolchain
 RUN mkdir /arm-cs-tools && \
-  curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | \
+  curl -L "http://pebble.gfunkmonk.info/secret/arm-cs-tools/GNU/arm-cs-tools-stripped.tar.xz" | \
   tar --strip-components=1 -xJ -C /arm-cs-tools
 
 # Install SDK 2
@@ -37,8 +37,8 @@ RUN pip install --no-cache-dir -r /tmp/requirements.txt
 RUN apk del .build-deps
 
 COPY . /code
-#FROM scratch
-#COPY --from=squashme / /
+FROM scratch
+COPY --from=squashme / /
 WORKDIR /code
 
 ENV PATH="$PATH:/arm-cs-tools/bin" \
