--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -7,7 +7,8 @@ psycopg2==2.8.4
 qrcode==6.1
 Pillow==6.2.1
 pygithub==1.14.2
-python-social-auth==0.1.23
+#python-social-auth==0.1.23
+python-social-auth==0.2.16
 redis==2.10.5
 boto==2.39.0
 gevent==1.1.1
@@ -18,7 +19,7 @@ django-bower==5.2.0
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
-dj-static==0.0.6
+whitenoise==3.3.0
 gunicorn==19.5.0
 dj-database-url==0.5.0
 newrelic==2.50.0.39
@@ -53,4 +54,4 @@ python-memcached==1.59
 #django-npm
 django-robots==3.0
 django-dotenv==1.4.1
-django-compat
+#django-compat
