--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.9.12
 django-registration==2.0.4
+-e git://github.com/pebble/django-pipeline.git@pbl-master#egg=pipeline
 amqp==2.5.1
 celery==4.1.0
 flup==1.0.3.dev-20110405
@@ -15,7 +16,7 @@ gevent==1.1.1
 psycogreen==1.0.1
 requests==2.22.0
 oauth2client==1.5.2
-django-bower==5.2.0
+#django-bower==5.2.0
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
